test/interpreter/correct/cor_05_heap_new_del.pl0
program heap;
var p, q;
begin
  new(p, 10);
  new(q, 20);
  delete(p);
  delete(q);
  write(1); { Success if no crash }
end