test/interpreter/error/err_05_invalid_alloc.pl0
program invalidalloc; 
var p; 
begin 
    new(p, -1); 
end